--- a/Migrations/Migrations.csproj
+++ b/Migrations/Migrations.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+	<ItemGroup>
+		<None Remove="Migrations\202218052228CreateFirstTables.sql" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Migrations\202218052228CreateFirstTables.sql" />
+	</ItemGroup>
+
 </Project>
