--- a/MyFirstNHibernateApi/MyFirstNHibernateApi.csproj
+++ b/MyFirstNHibernateApi/MyFirstNHibernateApi.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Migrations\Migrations.csproj" />
+  </ItemGroup>
+
 </Project>
